Fix UI alignment and add icons and url

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -37,7 +37,7 @@ button {
 }
 
 .navbarButtons > .button {
-    display: block;
+    display: flex;
     font-size: 17px;
     color: white;
     font-weight: 600;
@@ -46,10 +46,18 @@ button {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     min-width: 210px;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+button > a {
+    text-decoration: none;
+    color: white;
 }
 
 .navbarButtons > button:not(:active):hover {
-    background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
+    /* background-image: linear-gradient(rgb(0 0 0/40%) 0 0); */
+    background-color: rgba(221, 67, 43, 0.80);
 }
 
 .navbarButtons > button:active {
